# hsenv.sh

./: .travis.yml  README.md
exewrapper/: .gitignore  Gemfile  Guardfile  LICENSE  exewrapper.cabal
exewrapper/src/: ExeWrapper.hs  Main.hs
exewrapper/test/: ExeWrapperSpec.hs  Spec.hs  SpecHelper.hs
libexec/: archive  downloader  host  hsenv  hsenv_help  hsenv_main  hsenv_version  init  log  option  package
libexec/binchecker/: ix86-pc-linux-gnu-gmp3  ix86-pc-linux-gnu-gmp5  ix86-pc-solaris2.10  ix86-pc-solaris2.11  ix86-unknown-freebsd8  x86_64-apple-darwin11.0.0  x86_64-unknown-freebsd8  x86_64-unknown-linux-gnu-gmp3  x86_64-unknown-linux-gnu-gmp5
libexec/binchecker/src/: .gitignore
libexec/binchecker/src/freebsd/: v10.sh  v8.sh
libexec/binchecker/src/linux/: centos64.sh  opensuse64.sh
libexec/binchecker/versions/: 7.0.1  7.0.2  7.0.3  7.0.4  7.2.1  7.2.2  7.4.1  7.4.2  7.6.1  7.6.2  7.6.3  7.8.1  7.8.2  7.8.3  7.8.4
libexec/gnumakechecker/: GNUmakefile
patch/: cabal-install-0.10.2.patch  cabal-install-0.14.0.patch  cabal-install-0.6.4.patch  cabal-install-0.8.2.patch  cabal-install-1.16.0.2.patch
skelton/: cabal  cabal_config
test/: hsenv_--version_test.sh  hsenv_test.sh  init.sh  prepare_travis.sh  run.sh  test_archive.sh  test_downloader.sh  test_host.sh  test_hsenv.sh  test_hsenv_--help.sh  test_hsenv_--version.sh  test_init.sh  test_log.sh  test_option.sh  test_package.sh  test_transplant.sh  watch.sh
test/data/extract_archive/: bz2.txt  multi_root.tar  multi_root.tar.bz2  multi_root.tar.xz  test.tar  test.tar.bz2  test.txz
(+20 files in other folders)
