name:                exewrapper
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Isamu Mogi
maintainer:          isamu@leafytree.jp
category:            Development
build-type:          Simple
cabal-version:       >=1.10

executable wrapper
  main-is:             Main.hs
  build-depends: base
               , process
               , filepath
               , directory
  hs-source-dirs:      src
  default-language:    Haskell2010
