name:          exewrapper
version:       0.1.0.0
license:       MIT
license-file:  LICENSE
author:        Isamu Mogi
maintainer:    isamu@leafytree.jp
category:      Development
build-type:    Simple
cabal-version: >=1.10

executable wrapper
  main-is: Main.hs
  build-depends: base
               , process
               , filepath
               , directory

  hs-source-dirs: src
  ghc-options: -Wall -D CABAL_EXECUTABLE
  default-language: Haskell2010

  if !os(windows)
    build-depends: unix

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test,src
  ghc-options: -D CABAL_EXECUTABLE
  default-language: Haskell2010
  build-depends: base
               , process
               , filepath
               , directory
               , hspec
               , hspec-discover
               , QuickCheck

  if !os(windows)
    build-depends: unix
